# RAG-Advance

./: .claude.md  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.design-sync/: config.json
backend/: alembic.ini  auth.py  config.py  main.py  pyproject.toml  tenant.py
backend/agents/: rag_agent.py
backend/controllers/: admin_controller.py  auth_controller.py  chat_controller.py  document_controller.py
backend/database/: __init__.py  models.py
backend/database/migrations/: env.py  tenant_ops.py
backend/database/migrations/versions/: 3681a0c72309_add_documents_table.py  57616a36747d_add_tenant_chat_sessions_and_messages.py  8a651de8a972_initial_schema.py  8ddff4af3de4_create_tenant_users_table.py  b4e9f1a2c3d5_add_parent_chunks_table.py  f30c93f508b0_move_documents_to_tenant_schemas.py
backend/database/seeds/: seed.py
backend/repositories/: chat_repository.py  org_repository.py  user_repository.py
backend/services/: admin_service.py  auth_service.py  chat_service.py  document_service.py  qdrant_service.py  r2_service.py  retrieval_service.py
docker/: nginx.conf  start.sh  supervisord.conf
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Button.jsx  InputField.jsx  Logo.jsx  Sidebar.jsx  ThemeToggle.jsx  index.js
frontend/src/pages/admin/: AdminPage.jsx
frontend/src/pages/dashboard/: DashboardPage.jsx
frontend/src/pages/login/: LoginPage.jsx  OrgStep.jsx  PasswordStep.jsx
